set max width for fixed jump list

--- a/_sass/apps/_p4p.scss
+++ b/_sass/apps/_p4p.scss
@@ -232,7 +232,7 @@ label.required:after {
 
         &-fixed {
             position: fixed;
-            max-width: 275px;
+            max-width: 270px;
         }
         &-margin-top {
             margin-top: 74px;
